# semanticlint

./: .gitignore  CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/semanticlint/: __init__.py  cli.py  detect.py
src/semanticlint/checks/: base.py  registry.py
src/semanticlint/checks/lint/: syntax.py
src/semanticlint/checks/owl/: __init__.py  properties.py
src/semanticlint/checks/quality/: __init__.py  metrics.py
src/semanticlint/checks/rdf/: __init__.py  uris.py
src/semanticlint/checks/rdfs/: __init__.py  classes.py
src/semanticlint/checks/skos/: __init__.py  hierarchy.py  labels.py  schemes.py
tests/: conftest.py  fixtures.py
tests/features/cli/: check_command.feature  init_command.feature
tests/features/detect/: vocab_detection.feature
tests/features/lint/: syntax_validation.feature
tests/features/owl/: property_integrity.feature
tests/features/quality/: owl_quality.feature  skos_quality.feature
tests/features/rdf/: uri_format.feature
tests/features/rdfs/: class_label_integrity.feature
tests/features/skos/: hierarchy_integrity.feature  label_integrity.feature  scheme_integrity.feature
tests/step_defs/: test_cli_check.py  test_cli_init.py  test_owl_checks.py  test_quality_checks.py  test_rdf_uri.py  test_rdfs_checks.py  test_skos_hierarchy.py  test_skos_labels.py  test_skos_scheme.py  test_syntax_validation.py  test_vocab_detection.py
tests/unit/: test_cli.py  test_cli_init.py  test_detect.py  test_lint_syntax.py  test_owl_checks.py  test_quality_checks.py  test_rdf_uri.py  test_rdfs_checks.py  test_registry.py  test_skos_hierarchy.py  test_skos_labels.py  test_skos_scheme.py
