[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semanticlint"
version = "0.1.0"
description = "Extensible linter and quality pipeline for RDF, SKOS, OWL and RDFS vocabularies"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.25",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "pytest-bdd>=7.0",
    "coverage[toml]>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
semanticlint = "semanticlint.cli:main"

[project.urls]
Homepage   = "https://github.com/gbelbe/semanticlint"
Repository = "https://github.com/gbelbe/semanticlint"
Issues     = "https://github.com/gbelbe/semanticlint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/semanticlint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"

[tool.coverage.run]
source = ["semanticlint"]
omit   = ["src/semanticlint/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "C4", "SIM",
]
ignore = [
    "E501",
    "E701",
    "E702",
    "E741",
    "E402",
    "B008",
    "B904",
    "SIM105",
    "SIM108",
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
warn_return_any        = false
warn_unused_ignores    = false
pretty                 = true
